// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Pruebas en GifGrid Debe mostratrar items cuando se cargan imágenes con useFetchGifs 1`] = `
<Fragment>
  <h3
    className="animate__animated animate__fadeIn"
  >
    Categoria prueba
  </h3>
  <p
    className="animate__animated animate__flash"
  >
    Loading...
  </p>
  <div
    className="card-grid"
  >
    <GifGridItem
      id="abc"
      key="abc"
      title="titulo"
      url="https://wwww.adfasf/image.jpg"
    />
    <GifGridItem
      id="123abc"
      key="123abc"
      title="titulo"
      url="https://wwww.adfasf/image.jpg"
    />
  </div>
</Fragment>
`;

exports[`Pruebas en GifGrid GifGrid Debe mostrarse corectamente 1`] = `
<Fragment>
  <h3
    className="animate__animated animate__fadeIn"
  >
    Categoria prueba
  </h3>
  <p
    className="animate__animated animate__flash"
  >
    Loading...
  </p>
  <div
    className="card-grid"
  />
</Fragment>
`;
